@@ -46,6 +46,11 @@ Changelog
 - A handful of Python 3 compatibility fixes, especially for compatibility
   with the upcoming Python 3.4.
 
+- Fixed unrelated crash when a header contains an invalid END card (for
+  example "END = ").  This resulted in a cryptic traceback.  Now headers like
+  this will detect "clearly intended" END cards and produce a warning about
+  their invalidity and fix them. (#217)
+
 
 3.1.4 (unreleased)
 ------------------
@@ -79,6 +84,11 @@ Changelog
   that value.  For example replacing '0' with '0.0' will write '0.0' to the
   header so that it is returned as a floating point value.  Likewise a float
   can be downcast to an integer. (Backported from 3.2.1)
+
+- Fixed unrelated crash when a header contains an invalid END card (for
+  example "END = ").  This resulted in a cryptic traceback.  Now headers like
+  this will detect "clearly intended" END cards and produce a warning about
+  their invalidity and fix them. (Backported from 3.2.1)
 
 
 3.0.13 (unreleased)
